server/k8s/main-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-web
  template:
    metadata:
      labels:
        app: grpc-web
    spec:
      containers:
      - name: grpc-web
        image: gcr.io/GKE_PROJECT/IMAGE
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
