server/k8s/flutter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-flutter
spec:
  selector:
    app: main-flutter
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
