server/k8s/main-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-web
  annotations:
    cloud.google.com/app-protocols: '{"http2":"HTTP2"}'
spec:
  selector:
    app: grpc-web
  type: NodePort
  ports:
  - name: http2
    port: 3000
