server/k8s/http-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: main.getcouragenow.org
    http:
      paths:
      - backend:
          serviceName: main-flutter
          servicePort: 80
        path: /*
